# Vertebric

./: Cargo.toml  README.md  USE.md  architecture.md
src/: api.rs  auth.rs  cli.rs  config.rs  context.rs  cost.rs  engine.rs  lib.rs  main.rs  session.rs  types.rs
src/tools/: bash.rs  file_edit.rs  file_read.rs  file_write.rs  glob_tool.rs  grep.rs  mod.rs  web_fetch.rs
src/tui/: app.rs  mod.rs  ui.rs
