[package]
name = "vertebric"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
dirs = "5"
thiserror = "2"
anyhow = "1"
futures = "0.3"
glob = "0.3"
ratatui = "0.30.0"
crossterm = "0.29.0"
directories = "6.0.0"
dialoguer = "0.12.0"
tui-input = "0.15.0"
